Change image folder name

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="container">
         <section class="left">
             <div class="left-wrapper">
-                <a href="#"><img src="/images/logo.png" alt="Cloud Hosting" class="logo"></a>
+                <a href="#"><img src="images/logo.png" alt="Cloud Hosting" class="logo"></a>
                 <div class="benefit">
                         <h2>Your plan comes with:</h2>
                         <ul>
