Change all images folder

--- a/index.html
+++ b/index.html
@@ -17,21 +17,21 @@
                 <div class="benefit">
                         <h2>Your plan comes with:</h2>
                         <ul>
-                            <li><img src="/images/check.png" class="check">3-day free trial (no credit card, no charges)</li>
-                            <li><img src="/images/check.png" class="check">Free Object Cache Pro & SSL Certificate</li>
-                            <li><img src="/images/check.png" class="check">24/7/365 real-time expert support</li>
-                            <li><img src="/images/check.png" class="check">Unlimited websites</li>
+                            <li><img src="images/check.png" class="check">3-day free trial (no credit card, no charges)</li>
+                            <li><img src="images/check.png" class="check">Free Object Cache Pro & SSL Certificate</li>
+                            <li><img src="images/check.png" class="check">24/7/365 real-time expert support</li>
+                            <li><img src="images/check.png" class="check">Unlimited websites</li>
                         </ul>
                 </div>
                 <div class="rated">
                     <h3>Rated #1 SMB Hosting Provider on</h3>
                     <div class="trust">
-                        <img src="/images/trustpilot.png" alt="Trustpilot" class="trustpilot">
-                        <img src="/images/star.png" class="star">
-                        <img src="/images/star.png" class="star">
-                        <img src="/images/star.png" class="star">
-                        <img src="/images/star.png" class="star">
-                        <img src="/images/star.png" class="star">
+                        <img src="images/trustpilot.png" alt="Trustpilot" class="trustpilot">
+                        <img src="images/star.png" class="star">
+                        <img src="images/star.png" class="star">
+                        <img src="images/star.png" class="star">
+                        <img src="images/star.png" class="star">
+                        <img src="images/star.png" class="star">
                     </div>
                 </div>
             </div>
@@ -41,9 +41,9 @@
                 <h1>Welcome to Cloud Hosting</h1>
                 <div class="social-login">
                     <p>Sign up using</p>
-                    <a href="#"><div><img src="/images/google.png" alt="Google" class="google"></div></a>
-                    <a href="#"><div><img src="/images/linkedin.png" alt="Linkedin" class="linkedin"></div></a>
-                    <a href="#"><div><img src="/images/github.png" alt="Github" class="github"></div></a>
+                    <a href="#"><div><img src="images/google.png" alt="Google" class="google"></div></a>
+                    <a href="#"><div><img src="images/linkedin.png" alt="Linkedin" class="linkedin"></div></a>
+                    <a href="#"><div><img src="images/github.png" alt="Github" class="github"></div></a>
                 </div>
                 <div class="or">OR</div>
                  <div class="sign-up-form">
