revise mobile and tablet 2

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sign Up - Cloud Hosting1</title>
+    <title>Sign Up - Cloud Hosting</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -15,7 +15,7 @@
             <div class="left-wrapper">
                 <a href="#"><img src="images/logo.png" alt="Cloud Hosting" class="logo"></a>
                 <div class="benefit">
-                        <h2>Your plan comes with:</h2>
+                        <h2>Your plan comes with1:</h2>
                         <ul>
                             <li><img src="images/check.png" class="check">3-day free trial (no credit card, no charges)</li>
                             <li><img src="images/check.png" class="check">Free Object Cache Pro & SSL Certificate</li>
